<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gabri.tallerrelativelayout.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBlack">

            <TextView
                android:id="@+id/tv_title_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tv_msj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_welcome"
                android:layout_centerHorizontal="true"
                android:text="@string/mensaje1"
                android:textSize="13dp"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tv_msj2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_msj"
                android:layout_centerHorizontal="true"
                android:text="@string/mensaje2"
                android:textSize="13dp"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tv_msj3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_msj2"
                android:layout_centerHorizontal="true"
                android:text="@string/mensaje3"
                android:textSize="13dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/tv_msj4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_a_story"
                android:textSize="14dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorOrange"
                android:layout_marginLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textStyle="bold"
                android:layout_below="@id/tv_msj3"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"

                />

            <TextView
                android:id="@+id/tv_msj5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/how_it_works"
                android:textSize="14dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorWhite"
                android:layout_marginRight="50dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textStyle="bold"
                android:layout_below="@id/tv_msj3"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"

                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_clm_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_stories"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/im_image1"
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_marginLeft="14dp"

                    />
                
              

            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Climbing Everest"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    />



                <TextView
                    android:id="@+id/tv_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="By Gary White"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:layout_below="@id/tv_text1"
                    android:layout_marginLeft="10dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="47 min ago"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"


                    />

            </RelativeLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/im_image2"
                        android:layout_width="130dp"
                        android:layout_height="120dp"
                        android:src="@mipmap/ic_launcher_round"
                        android:layout_marginLeft="14dp"

                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Deserted Cities"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        />


                    <TextView
                        android:id="@+id/tv_text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="By Savannah Walkman"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_below="@id/tv_text3"
                        android:layout_marginLeft="10dp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="29"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="55 min ago"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="10dp"


                        />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/im_image3"
                        android:layout_width="130dp"
                        android:layout_height="120dp"
                        android:src="@mipmap/ic_launcher_round"
                        android:layout_marginLeft="14dp"

                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_text5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Systems Engineering"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        />


                    <TextView
                        android:id="@+id/tv_text6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="By Gabriel Montezuma"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_below="@id/tv_text5"
                        android:layout_marginLeft="10dp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="27"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10 hour ago"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="10dp"


                        />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
